--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit Fingerprint Sensor Library@^2.1.3
 	adafruit/Adafruit SSD1306@^2.5.13
+	chris--a/Keypad@^3.1.1
