--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,8 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	adafruit/Adafruit Fingerprint Sensor Library@^2.1.3
-	adafruit/Adafruit SSD1306@^2.5.13
-	chris--a/Keypad@^3.1.1
+    adafruit/Adafruit Fingerprint Sensor Library@^2.1.3
+    adafruit/Adafruit SSD1306@^2.5.13
+    adafruit/SdFat - Adafruit Fork@^2.2.3
+    chris--a/Keypad@^3.1.1
+    
