--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+debug_tool = cmsis-dap
 lib_deps = 
 	adafruit/Adafruit Fingerprint Sensor Library@^2.1.3
 	adafruit/Adafruit SSD1306@^2.5.13
