--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,5 @@ monitor_speed = 115200
 debug_tool = cmsis-dap
 lib_deps = 
 	adafruit/Adafruit Fingerprint Sensor Library@^2.1.3
-	adafruit/Adafruit SSD1306@^2.5.13
 	chris--a/Keypad@^3.1.1
+	olikraus/U8g2@^2.36.5
